// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render device dashboard 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
  border: none;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:hover,
.c8:focus {
  background: #B29DFF;
}

.c8:active {
  background: #C5B6FF;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c18:hover,
.c18:focus {
  background: rgba(255,255,255,0.07);
}

.c18:active {
  background: rgba(255,255,255,0.13);
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c16 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  border: none;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c14 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c14 > thead > tr > th,
.c14 > tbody > tr > th,
.c14 > tfoot > tr > th,
.c14 > thead > tr > td,
.c14 > tbody > tr > td,
.c14 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c14 > thead > tr > th:first-child,
.c14 > tbody > tr > th:first-child,
.c14 > tfoot > tr > th:first-child,
.c14 > thead > tr > td:first-child,
.c14 > tbody > tr > td:first-child,
.c14 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c14 > thead > tr > th:last-child,
.c14 > tbody > tr > th:last-child,
.c14 > tfoot > tr > th:last-child,
.c14 > thead > tr > td:last-child,
.c14 > tbody > tr > td:last-child,
.c14 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c14 > tbody > tr > td {
  vertical-align: middle;
}

.c14 > thead > tr > th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c14 > thead > tr > th svg {
  height: 12px;
}

.c14 > tbody > tr > td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c14 tbody tr {
  transition: all 150ms;
  position: relative;
  border-bottom: 2px solid rgba(255,255,255,0.07);
}

.c14 tbody tr:hover {
  border-bottom: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c14 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.12),0px 4px 5px 0px rgba(0,0,0,0.14),0px 2px 4px -1px rgba(0,0,0,0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 200px 200px 0;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid rgba(255,255,255,0.07);
  border-radius: 0 200px 200px 0;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  border-radius: 200px;
  height: 100%;
  background: transparent;
  max-width: 725px;
}

.c9 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 56px;
  margin-bottom: 12px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  font-size: 16px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  padding-right: 184px;
  padding-left: 32px;
}

.c15 > tbody > tr td {
  vertical-align: middle;
  height: 32px;
}

<div
  class="c0 c1 c2"
  style="width: 904px; padding: 0px;"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Two-Factor Devices
    </div>
    <button
      class="c8"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c9"
  >
    <div
      class="c10"
    >
      <input
        class="c11"
        placeholder="Search..."
        value=""
      />
      <div
        class="c12"
      >
        <div
          class="c13"
        />
      </div>
    </div>
  </div>
  <table
    class="c14 c15"
    style="max-width: 100%;"
  >
    <thead>
      <tr>
        <th
          style="cursor: default;"
        >
          Type
        </th>
        <th
          style="cursor: default;"
        >
          Device Name
        </th>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Registered
            <span
              class="c16 icon icon-chevrondown"
              title="sort items desc"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </th>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Last Used
            <span
              class="c16 icon icon-chevronsvertical"
              title="sort items"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                />
                <path
                  d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                />
              </svg>
            </span>
          </a>
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Authenticator App
        </td>
        <td
          title="iphone 12"
        >
          <div
            class="c17"
            style="max-width: 96px; white-space: nowrap;"
          >
            iphone 12
          </div>
        </td>
        <td>
          2021-08-12
        </td>
        <td>
          2021-08-12
        </td>
        <td
          align="right"
        >
          <button
            class="c18"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="solokey"
        >
          <div
            class="c17"
            style="max-width: 96px; white-space: nowrap;"
          >
            solokey
          </div>
        </td>
        <td>
          2021-06-15
        </td>
        <td>
          2021-06-18
        </td>
        <td
          align="right"
        >
          <button
            class="c18"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="backup yubikey"
        >
          <div
            class="c17"
            style="max-width: 96px; white-space: nowrap;"
          >
            backup yubikey
          </div>
        </td>
        <td>
          2021-04-18
        </td>
        <td>
          2021-07-16
        </td>
        <td
          align="right"
        >
          <button
            class="c18"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="yubikey"
        >
          <div
            class="c17"
            style="max-width: 96px; white-space: nowrap;"
          >
            yubikey
          </div>
        </td>
        <td>
          2021-02-05
        </td>
        <td>
          2021-02-28
        </td>
        <td
          align="right"
        >
          <button
            class="c18"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render failed state for creating restricted privilege token 1`] = `
.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-bottom: 16px;
  background: #FF6257;
  color: #000000;
}

.c9 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
  border: none;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:hover,
.c8:focus {
  background: #B29DFF;
}

.c8:active {
  background: #C5B6FF;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c19:hover,
.c19:focus {
  background: rgba(255,255,255,0.07);
}

.c19:active {
  background: rgba(255,255,255,0.13);
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c17 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  border: none;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c15 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c15 > thead > tr > th,
.c15 > tbody > tr > th,
.c15 > tfoot > tr > th,
.c15 > thead > tr > td,
.c15 > tbody > tr > td,
.c15 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c15 > thead > tr > th:first-child,
.c15 > tbody > tr > th:first-child,
.c15 > tfoot > tr > th:first-child,
.c15 > thead > tr > td:first-child,
.c15 > tbody > tr > td:first-child,
.c15 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c15 > thead > tr > th:last-child,
.c15 > tbody > tr > th:last-child,
.c15 > tfoot > tr > th:last-child,
.c15 > thead > tr > td:last-child,
.c15 > tbody > tr > td:last-child,
.c15 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c15 > tbody > tr > td {
  vertical-align: middle;
}

.c15 > thead > tr > th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c15 > thead > tr > th svg {
  height: 12px;
}

.c15 > tbody > tr > td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c15 tbody tr {
  transition: all 150ms;
  position: relative;
  border-bottom: 2px solid rgba(255,255,255,0.07);
}

.c15 tbody tr:hover {
  border-bottom: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c15 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.12),0px 4px 5px 0px rgba(0,0,0,0.14),0px 2px 4px -1px rgba(0,0,0,0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c14 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 200px 200px 0;
}

.c13 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid rgba(255,255,255,0.07);
  border-radius: 0 200px 200px 0;
}

.c11 {
  position: relative;
  display: flex;
  overflow: hidden;
  border-radius: 200px;
  height: 100%;
  background: transparent;
  max-width: 725px;
}

.c10 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 56px;
  margin-bottom: 12px;
}

.c12 {
  border: none;
  outline: none;
  box-sizing: border-box;
  font-size: 16px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  padding-right: 184px;
  padding-left: 32px;
}

.c16 > tbody > tr td {
  vertical-align: middle;
  height: 32px;
}

<div
  class="c0 c1 c2"
  style="width: 904px; padding: 0px;"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Two-Factor Devices
    </div>
    <button
      class="c8"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c9"
    kind="danger"
  >
    failed to create privilege token
  </div>
  <div
    class="c10"
  >
    <div
      class="c11"
    >
      <input
        class="c12"
        placeholder="Search..."
        value=""
      />
      <div
        class="c13"
      >
        <div
          class="c14"
        />
      </div>
    </div>
  </div>
  <table
    class="c15 c16"
    style="max-width: 100%;"
  >
    <thead>
      <tr>
        <th
          style="cursor: default;"
        >
          Type
        </th>
        <th
          style="cursor: default;"
        >
          Device Name
        </th>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Registered
            <span
              class="c17 icon icon-chevrondown"
              title="sort items desc"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </th>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Last Used
            <span
              class="c17 icon icon-chevronsvertical"
              title="sort items"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                />
                <path
                  d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                />
              </svg>
            </span>
          </a>
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Authenticator App
        </td>
        <td
          title="iphone 12"
        >
          <div
            class="c18"
            style="max-width: 96px; white-space: nowrap;"
          >
            iphone 12
          </div>
        </td>
        <td>
          2021-08-12
        </td>
        <td>
          2021-08-12
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="solokey"
        >
          <div
            class="c18"
            style="max-width: 96px; white-space: nowrap;"
          >
            solokey
          </div>
        </td>
        <td>
          2021-06-15
        </td>
        <td>
          2021-06-18
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="backup yubikey"
        >
          <div
            class="c18"
            style="max-width: 96px; white-space: nowrap;"
          >
            backup yubikey
          </div>
        </td>
        <td>
          2021-04-18
        </td>
        <td>
          2021-07-16
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="yubikey"
        >
          <div
            class="c18"
            style="max-width: 96px; white-space: nowrap;"
          >
            yubikey
          </div>
        </td>
        <td>
          2021-02-05
        </td>
        <td>
          2021-02-28
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render failed state for fetching devices 1`] = `
.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-bottom: 16px;
  background: #FF6257;
  color: #000000;
}

.c9 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
  border: none;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:hover,
.c8:focus {
  background: #B29DFF;
}

.c8:active {
  background: #C5B6FF;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  border: none;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0 c1 c2"
  style="width: 904px; padding: 0px;"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Two-Factor Devices
    </div>
    <button
      class="c8"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c9"
    kind="danger"
  >
    failed to fetch devices
  </div>
</div>
`;
